--- a/src/view/student.fxml
+++ b/src/view/student.fxml
@@ -6,11 +6,53 @@
 <?import javafx.scene.*?>	
 <?import javafx.scene.layout.VBox?>	
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.Label ?>
+<?import javafx.scene.layout.GridPane?>	
+<?import javafx.scene.control.TextField ?>
 
-<VBox styleClass="background" prefHeight="400.0" prefWidth="600.0" spacing="20" 
-      xmlns:fx="http://javafx.com/fxml/1" >
+<?import javafx.scene.control.*?>
+
+<VBox xmlns:fx="http://javafx.com/fxml/1" styleClass="background" prefHeight="400.0" prefWidth="600.0" spacing="20"  alignment="CENTER"
+       >
+    
+   <VBox styleClass="header" >
+     <Label text="Personal Details" styleClass="label-h2"/>
+ <GridPane styleClass="header"  alignment="CENTER" hgap="5" vgap="20">
+     
+        <Label text="Name:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="nameTF"/>
+       <Label text="Email:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="emailTF"/>
+      <Label text="Phone:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="phoneTF"/>
+      <Label text="Adress:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="adressTF"/>
+     
+       
+   </GridPane>
+    </VBox>
     <padding>
+         
         <Insets top="10" bottom="10" left="5" right="5" />
     </padding>
+    
+    <VBox styleClass="header" alignment="CENTER">
+     <GridPane styleClass="header"  alignment="CENTER" hgap="5" vgap="10">
+        <Label text="Name:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="studentidTF"/>
+       <Label text="Email:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="typeTF"/>
+      <Label text="Phone:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="creditsTF"/>
+      <Label text="Adress:"  styleClass="label-opac" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
+      <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="ScholarshipTF"/>
+       
+   </GridPane>
+    </VBox>
+    
+     <stylesheets>
+        <URL value="@tmsfx.css"/>
+  </stylesheets>
+    
    
 </VBox>
