--- a/src/view/faculty.fxml
+++ b/src/view/faculty.fxml
@@ -5,9 +5,62 @@
 <?import java.util.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>  
+<?import javafx.scene.text.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.cell.*?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="center"
-      spacing="10" styleClass="background" prefHeight="400.0" prefWidth="600.0">
+<VBox xmlns:fx="http://javafx.com/fxml/1" styleClass="background" prefHeight="400.0" prefWidth="600.0" spacing="20"  alignment="CENTER"
+   fx:controller="controller.FacultyController"    >
+    
+    <HBox alignment="CENTER_LEFT">
+    <Text text="Filter" styleClass="label-h2" />
+      </HBox>
+    <HBox alignment="CENTER">
+       <Label text="Name:"  styleClass="label-opac"/>
+        <TextField  fx:id="nameTF"/>
+        <Label text="Email:"  styleClass="label-opac"/>
+        <TextField  fx:id="emailTF" text="Filter by email"/>
+    </HBox>
+    
+    <Separator/>
+    
+    <TableView fx:id="studentsTv" items="${controller.faculty.students}" >
+        <columns>
+            <TableColumn text="Name" prefWidth="200.0">
+                <cellValueFactory>
+                    <PropertyValueFactory property="name" />
+                </cellValueFactory>
+            </TableColumn>
+             <TableColumn text="Email" prefWidth="200.0">
+             <cellValueFactory>
+                    <PropertyValueFactory property="email" />
+                </cellValueFactory>
+             </TableColumn>
+              <TableColumn text="Phone" prefWidth="200.0">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="phone" />
+                </cellValueFactory>
+              </TableColumn>
+        </columns>
+    </TableView>
+    
+    <Separator/>
+    
+    <HBox spacing="10"  styleClass="content">
+         <Button text="Add" onAction="#handleAddStudent"/>
+          <Button text="Delete"/>
+            <Button text="Select" onAction="#handleSelectStudent" />
+          <Button text="SLIP"/>
+            <Button text="Report"/>
+          <Button text="Close"/>
+    </HBox>
+    
+        
+  <stylesheets>
+        <URL value="@tmsfx.css"/>
+  </stylesheets>
     
     
+   
 </VBox>
