--- a/src/view/session.fxml
+++ b/src/view/session.fxml
@@ -25,7 +25,7 @@
     </VBox>
     <VBox spacing="20" alignment="BOTTOM_RIGHT" >
     <Button text="Login" onAction="#handleLogin" />
-    <Button text="Exit"/>
+    <Button text="Exit" onAction="#handleClose" />
     </VBox>
     
   <stylesheets>
